Allow user to plot year as series when accumulations are year numbers.